[package]
name = "rudolfs"
version = "0.2.10"
authors = ["Jason White <rust@jasonwhite.io>"]
edition = "2018"
description = """
A high-performance, caching Git LFS server with an AWS S3 back-end.
"""
documentation = "https://github.com/jasonwhite/rudolfs"
homepage = "https://github.com/jasonwhite/rudolfs"
repository = "https://github.com/jasonwhite/rudolfs"
readme = "README.md"
keywords = ["git-lfs", "s3"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
askama = "0.8"
bytes = "0.4"
chacha = "0.3"
derive_more = "0.99"
futures = "0.1"
futures-backoff = "0.1"
generic-array = "0.14"
hex = "0.3"
http = "0.1"
human-size = "0.4"
humantime = "2"
hyper = "0.12"
linked-hash-map = { version = "0.5", features = ["serde_impl"] }
log = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.9"
structopt = "0.3"
tokio = "0.1"
url = "1"
uuid = { version = "0.8", features = ["v4"] }
rand = { version = "0.6", optional = true }

[dependencies.rusoto_core]
version = "0.40"
default_features = false
features = ["rustls"]

[dependencies.rusoto_s3]
version = "0.40"
default_features = false
features = ["rustls"]

[features]
default = []
# If the "faulty" feature is enabled, random failures are injected into the byte
# stream.
faulty = ["rand"]
