[package]
name = "rudolfs"
version = "0.3.6"
authors = ["Jason White <rust@jasonwhite.io>"]
edition = "2018"
description = """
A high-performance, caching Git LFS server with an AWS S3 back-end.
"""
documentation = "https://github.com/jasonwhite/rudolfs"
homepage = "https://github.com/jasonwhite/rudolfs"
repository = "https://github.com/jasonwhite/rudolfs"
readme = "README.md"
keywords = ["git-lfs", "s3"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
askama = "0.11"
async-stream = "0.3"
async-trait = "0.1"
backoff = { version = "0.3", features = ["tokio"] }
bytes = "1"
chacha = "0.3"
derive_more = "0.99"
futures = "0.3"
generic-array = "0.14"
hex = "0.3"
http = "0.2"
human-size = "0.4"
humansize = "1"
humantime = "2"
hyper = { version = "0.14", features = ["server", "http1", "http2", "tcp", "stream"] }
linked-hash-map = { version = "0.5", features = ["serde_impl"] }
log = "0.4"
pretty_env_logger = "0.4"
rand = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
url = "2"
uuid = { version = "1.1", features = ["v4"] }

[dev-dependencies]
rand = "0.8"
tempfile = "3"
duct = "0.13"
env_logger = "0.9"
toml = "0.5"

[dependencies.rusoto_core]
version = "0.48"
default_features = false
features = ["rustls"]

[dependencies.rusoto_credential]
version = "0.48"

[dependencies.rusoto_sts]
version = "0.48"
features = ["rustls"]
default_features = false

[dependencies.rusoto_s3]
version = "0.48"
default_features = false
features = ["rustls"]

[features]
default = []
# If the "faulty" feature is enabled, random failures are injected into the byte
# stream.
faulty = ["rand"]
